completed stretch goals

--- a/involved.html
+++ b/involved.html
@@ -22,10 +22,10 @@
       </div><!--
       --><div id="title_contain">
           <h1>
-            Yosemite Park Guide
+            Yoooosseemmmiitteee
           </h1>
           <p>
-            Come explore California’s beautiful wilderness.
+            Get involved TODAY. Just DO IT.
           </p>
           <br  />
           <p id="small_para">
