--- a/learn.html
+++ b/learn.html
@@ -22,33 +22,37 @@
       </div><!--
       --><div id="title_contain">
           <h1>
-            Yosemite Park Guide
+            Learn About Yosemite
           </h1>
           <p>
-            Come explore California’s beautiful wilderness.
+            Learn about all of the things and do them.
           </p>
           <br  />
           <p id="small_para">
-            Always open. Reservations are not available or required to enter the park.
+            Sometimes open, sometimes closed, you should learn when and where. Perhaps even why.
           </p>
       </div>
     </div>
     </header>
     <section>
       <section id="main_body">
-        <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers,
-        the persistence of life, and the tranquility of the High Sierra.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
           <br  />
-        <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly
-        1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
       </section>
       <img class="clipart" src="https://image.flaticon.com/icons/svg/2979/2979348.svg">
-      <p class="body_para">Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with
-      the park’s ecosystems. This blog provides updates about fires in Yosemite. <strong>Check for current fire restrictions</strong>.</p>
+      <p class="body_para">Start responsible campfires, but under no circumstances are you permitted to hose a gender reveal party on park property. No exceptions.</p>
       
       <img class="clipart" src="https://image.flaticon.com/icons/svg/820/820374.svg">
-      <p class="body_para">We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <strong>park
-      entrance fee</strong> upon arrival (there's no need to pay it in advance).</p>
+      <p class="body_para">Ever see an RV? Ever see one up close? We didn't think so. If you come visit the park you're bound to see a whole flock of AreVee's.
+          They are one of the top attractions to people to come and see us. 
+      </p>
     </section>
     <footer>
       <div id="footer_img"></div>
