--- a/visit.html
+++ b/visit.html
@@ -36,11 +36,9 @@
     </header>
     <section>
       <section id="main_body">
-        <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers,
-        the persistence of life, and the tranquility of the High Sierra.</p>
+        <p>Plan your visit with us today by sending an email to <a>blahblahblah@YosemiteEmail.com</a> </p>
           <br  />
-        <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly
-        1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
       </section>
       <img class="clipart" src="https://image.flaticon.com/icons/svg/2979/2979348.svg">
       <p class="body_para">Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with
